--- a/appspec.yml
+++ b/appspec.yml
@@ -2,7 +2,7 @@ version: 0.0
 os: linux
 files:
   - source: /
-    destination: /usr/share/nginx/html/angularjs-app
+    destination: /var/www/html
 hooks:
   AfterInstall:
     - location: scripts/restart_server.sh
